k8s/ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-hostname-deployment
  namespace: node-hostname
  labels:
    app: node-hostname
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-hostname
  template:
    metadata:
      labels:
        app: node-hostname
    spec:
      containers:
      - name: node-hostname
        image: ghcr.io/prtzb/node-hostname/node-hostname:0.0.1
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
