k8s/ingress/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: node-hostname-service
  namespace: node-hostname
spec:
  selector:
    app: node-hostname
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
